Fixed preview flickering on OS X

--- a/themes/GitHub/style.css
+++ b/themes/GitHub/style.css
@@ -23,6 +23,7 @@
   font-size: 14px;
   line-height: 2;
   word-wrap: break-word;
+  background-color: #fff;
 }
 
 #container a {
